# career-ai

./: README.md  ПрофАпдейт Войтивайти.pptx
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai_jobs.py  auth.py  health.py  survey_sessions.py  test_attempts.py  test_methodologies.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ai_recommendation_job.py  answer.py  career_recommendation.py  career_test.py  career_test_attempt.py  career_test_score.py  course_recommendation.py  enums.py  question.py  recommendation.py  survey_session.py  test_methodology.py  user.py  vacancy_recommendation.py
backend/app/repositories/: career_test.py  user.py
backend/app/resources/: yovayshi_rezapkina.py
backend/app/schemas/: ai_job.py  auth.py  career_test.py  common.py  methodology.py  recommendation.py  survey.py  user.py
backend/app/services/: ai_jobs.py  auth.py  bothub_ai.py  career_test.py  courses.py  hh.py  methodology.py
backend/tests/: test_health.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: CareerTestBlock.vue  LoadingPong.vue  SiteFooter.vue  SiteHeader.vue  ThemedSiteHeader.vue
frontend/src/composables/: useTheme.js
frontend/src/constants/: careerTest.js
frontend/src/lib/: api.js  session.js  storage.js
frontend/src/pages/: AuthPage.vue  (+3 more)
(+1 files in other folders)
